Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Now that we know how to label different functions, we can also take a look at what it means for functions to depend on other functions.  In code, we see this all of the time.  For example, here is a function that we have solved before."
+    "Now that we know how to label different functions, we can also take a look at what it means for functions to depend on other functions.  In code, we see this all of the time.  For example, here is a function that we have solved before."
    ]
   },
   {
